feat(readme): update landing page

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p class="copyright font-alt">&copy; 2017&nbsp;<a href="index.html">TitaN</a>, All Rights Reserved</p>
+                        <p class="copyright font-alt">&copy; 2024&nbsp;<a href="/">CrazyPong</a>, All Rights Reserved</p>
                     </div>
                     <div class="col-sm-6">
-                        <div class="footer-social-links"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-dribbble"></i></a><a href="#"><i class="fa fa-skype"></i></a>
+                        <div class="footer-social-links"><a href="https://www.linkedin.com/in/rayane-toko/"><i class="fa fa-linkedin"></i></a><a href="https://github.com/RyanTk03/ALX_Foundation_Portfolio_Project.git"><i class="fa fa-github"></i></a><a href="https://x.com/RayaneTOKO"><i class="fa fa-twitter"></i></a>
                         </div>
                     </div>
                 </div>
